--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGO_URL ="mongodb://0.0.0.0:27017/?tls=false&readPreference=primary&directConnection=true"
+MONGO_URL ="mongodb://0.0.0.0:27017/Practice?tls=false&readPreference=primary&directConnection=true"
+JWT_SECERT = "spy!@!)@$!"
