user and role added

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 MONGO_URL ="mongodb://0.0.0.0:27017/Practice?tls=false&readPreference=primary&directConnection=true"
 JWT_SECERT = "spy!@!)@$!"
+
+# role of application user
+USER = "USER"
+SELLER = 'SELLER'
+ADMIN  ='ADMIN'
