--- a/.env
+++ b/.env
@@ -5,3 +5,8 @@ JWT_SECERT = "spy!@!)@$!"
 USER = "USER"
 SELLER = 'SELLER'
 ADMIN  ='ADMIN'
+
+# Cloundary 
+CLOUD_NAME = 'dbjiys9se'
+CLOUD_KEY = '432187473388113'
+CLOUD_SECERT = 'ErXw2N3IiMxYXDniZzGy9bhlAgU'
