--- a/package.json
+++ b/package.json
@@ -13,16 +13,21 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.40.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.0"
+    "mongoose": "^7.5.0",
+    "multer": "^1.4.5-lts.1",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.3",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.6.0",
     "nodemon": "^3.0.1",
     "rimraf": "^5.0.1",
