--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "winston": "^3.10.0"
   },
   "devDependencies": {
