socket io intialize

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MONGO_URL ="mongodb://0.0.0.0:27017/Practice?tls=false&readPreference=primary&directConnection=true"
 JWT_SECERT = "spy!@!)@$!"
-
+ORIGIN = "http://localhost:4200"
 # role of application user
 USER = "USER"
 SELLER = 'SELLER'
