--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
     "react-infinite-scroll-component": "^6.1.0",
+    "socket.io": "^4.7.2",
     "winston": "^3.10.0"
   },
   "devDependencies": {
